Fixed ios layout bug

--- a/assets/stylesheets/active-room.scss
+++ b/assets/stylesheets/active-room.scss
@@ -1,10 +1,12 @@
 .room-content {
   position: absolute;
   height: 100%;
+  overflow: hidden;
 
   .room-info {
-    position: absolute;
-    width: 100%;
+    position: fixed;
+    z-index: 100;
+    background: #fff;
     top: 0em;
     padding: 0.25em;
     font-size: 1.25em;
@@ -112,8 +114,7 @@
   }
 
   .new-message {
-    width: 100%;
-    position: absolute;
+    position: fixed;
     bottom: 0em;
 
     textarea {
